--- a/src/main/resources/com/example/ti3_tankbattle/game.fxml
+++ b/src/main/resources/com/example/ti3_tankbattle/game.fxml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
-<?import javafx.scene.control.TextField?>
+<?import javafx.scene.control.Label?>
 <?import javafx.scene.image.ImageView?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.layout.ColumnConstraints?>
@@ -206,20 +206,20 @@
             <ImageView fx:id="Image159" fitHeight="35.0" fitWidth="37.5" pickOnBounds="true" preserveRatio="true" GridPane.columnIndex="15" GridPane.rowIndex="9" />
          </children>
       </GridPane>
-      <TextField fx:id="P1TF" alignment="CENTER" layoutX="14.0" layoutY="14.0" prefHeight="25.0" prefWidth="139.0" text="jugador 1">
+      <Label layoutX="14.0" layoutY="7.0" text="player 1">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
-      </TextField>
-      <TextField fx:id="P3TF" alignment="CENTER" layoutX="447.0" layoutY="14.0" prefHeight="25.0" prefWidth="139.0" text="jugador 3">
+      </Label>
+      <Label layoutX="266.0" layoutY="7.0" text="player 2">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
-      </TextField>
-      <TextField fx:id="P2TF" alignment="CENTER" layoutX="231.0" layoutY="14.0" prefHeight="25.0" prefWidth="139.0" text="jugador 2">
+      </Label>
+      <Label layoutX="516.0" layoutY="7.0" text="CPU">
          <font>
-            <Font name="System Bold" size="12.0" />
+            <Font name="System Bold" size="18.0" />
          </font>
-      </TextField>
+      </Label>
    </children>
 </AnchorPane>
