--- a/src/main/resources/com/example/ti3_tankbattle/Principal.fxml
+++ b/src/main/resources/com/example/ti3_tankbattle/Principal.fxml
@@ -12,7 +12,7 @@
    <children>
       <ImageView fitHeight="241.0" fitWidth="457.0" layoutX="86.0" layoutY="14.0" pickOnBounds="true" preserveRatio="true">
          <image>
-            <Image url="@../../../a2.png" />
+            <Image url="@Principal.png" />
          </image>
       </ImageView>
       <Label layoutX="171.0" layoutY="257.0" text="Ingrese los nombres de los jugadores" textFill="#fffbfb">
