--- a/src/main/resources/com/example/ti3_tankbattle/game.fxml
+++ b/src/main/resources/com/example/ti3_tankbattle/game.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.canvas.Canvas?>
+<?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.layout.AnchorPane?>
 <?import javafx.scene.shape.Circle?>
@@ -39,5 +40,6 @@
       <Circle fx:id="P2V5" fill="DODGERBLUE" layoutX="260.0" layoutY="53.0" radius="6.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fx:id="P2V2" fill="DODGERBLUE" layoutX="320.0" layoutY="53.0" radius="6.0" stroke="BLACK" strokeType="INSIDE" />
       <Circle fx:id="P2V1" fill="DODGERBLUE" layoutX="340.0" layoutY="53.0" radius="6.0" stroke="BLACK" strokeType="INSIDE" />
+      <Button fx:id="endgame_Button" layoutX="264.0" layoutY="2.0" mnemonicParsing="false" onAction="#endGame" text="ENDGAME" />
    </children>
 </AnchorPane>
